<?xml version="1.0" encoding="UTF-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/custom_solar" android:key="@string/custom_solar" android:orderingFromXml="true" android:enabled="true" android:summary="@string/custom_solar_summary">
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_0" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_1" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_2" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_3" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_4" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_5" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_6" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_7" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_8" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_9" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_10" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_11" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_12" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_13" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_14" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_15" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_16" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_17" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_18" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_solar_item_hint" android:key="custom_solar_item_19" android:title="@string/setting_custom_solar_item" android:summary="@string/setting_custom_solar_item_summary" android:dialogMessage="@string/setting_custom_solar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
    </PreferenceScreen>
