<!--
 * Copyright (C) 2014 XiaoXia(http://xiaoxia.de/)
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/custom_lunar" android:key="@string/custom_lunar" android:orderingFromXml="true" android:enabled="true" android:summary="@string/custom_lunar_summary">
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_0" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_1" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_2" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_3" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_4" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_5" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_6" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_7" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_8" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_9" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_10" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_11" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_12" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_13" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_14" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_15" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_16" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_17" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_18" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
        <EditTextPreference android:singleLine="true" android:hint="@string/setting_custom_lunar_item_hint" android:key="custom_lunar_item_19" android:title="@string/setting_custom_lunar_item" android:summary="@string/setting_custom_lunar_item_summary" android:dialogMessage="@string/setting_custom_lunar_howtodo_msg" android:negativeButtonText="@string/cancel" android:positiveButtonText="@string/ok"/>/>
    </PreferenceScreen>
